[package]
name = "hackasm"
version = "0.1.0"
authors = ["Tomohito Ozaki <ozaki@yuroyoro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
enum-utils = "0.1.2"
